TEST FINNALY DONE